syntax = "proto2";

package token;

message Account {
  required string username = 1;
  required bytes private_key = 2;
  required uint32 registration_id = 3;
  required string password = 4;
  required bytes identity_keypair = 5;
  required uint32 device_id = 6;
  required bytes signaling_key = 7;
}